# swift-demangler

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  build.rs
.github/workflows/: build-and-test.yml  release.yml  rust.yml
scripts/: release.sh
src/: accessor.rs  async_symbol.rs  autodiff.rs  closure.rs  constructor.rs  context.rs  descriptor.rs  enum_case.rs  function.rs  helpers.rs  lib.rs  macro_symbol.rs  metadata.rs  outlined.rs  specialization.rs  symbol.rs  thunk.rs  types.rs  witness_table.rs
src/raw/: ffi.rs  mod.rs  node_kinds.rs
swift-demangling/: CMakeLists.txt  README.md
swift-demangling/include/: swift_demangle.h  swift_node_kinds.h
swift-demangling/scripts/: extract-swift-demangling.sh  generate-node-kinds-rs.c  generate-node-kinds.c  generate-node-kinds.sh
swift-demangling/src/: main.cpp  swift_demangle.cpp
tests/: snapshot_manglings.rs
tests/snapshots/: snapshot_manglings__all_manglings_snapshot.snap
